# models/pool_object_add_response.go
@@ -6,6 +6,8 @@ package models
 // Editing this file might prove futile when you re-run the swagger generate command
 
 import (
+	"context"
+
 	"github.com/go-openapi/errors"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
@@ -42,6 +44,11 @@ func (m *PoolObjectAddResponse) validateStatus(formats strfmt.Registry) error {
 		return err
 	}
 
+	return nil
+}
+
+// ContextValidate validates this pool object add response based on context it is used
+func (m *PoolObjectAddResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
 	return nil
 }
 
