# models/pool_query_response.go
@@ -6,6 +6,8 @@ package models
 // Editing this file might prove futile when you re-run the swagger generate command
 
 import (
+	"context"
+
 	"github.com/go-openapi/errors"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
@@ -19,7 +21,7 @@ type PoolQueryResponse struct {
 
 	// calculated quantile
 	// Required: true
-	CalculatedQuantile *float64 `json:"calculatedQuantile"`
+	CalculatedQuantile *int32 `json:"calculatedQuantile"`
 
 	// total count
 	// Required: true
@@ -59,6 +61,11 @@ func (m *PoolQueryResponse) validateTotalCount(formats strfmt.Registry) error {
 		return err
 	}
 
+	return nil
+}
+
+// ContextValidate validates this pool query response based on context it is used
+func (m *PoolQueryResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
 	return nil
 }
 
